src/migration/sea_orm/timestamp/snapshots/roadster__migration__timestamp__tests__add_update_timestamp_function@case_1.snap
---
source: src/migration/timestamp/mod.rs
expression: statement
---
Some(
    Statement {
        sql: "\nCREATE OR REPLACE FUNCTION update_timestamp_updated_at() RETURNS TRIGGER AS $$\nBEGIN\n    NEW.updated_at = NOW();\n    RETURN NEW;\nEND;\n$$ language 'plpgsql';\n",
        values: None,
        db_backend: Postgres,
    },
)
