src/migration/sea_orm/timestamp/snapshots/roadster__migration__timestamp__tests__add_update_timestamp_trigger@case_1.snap
---
source: src/migration/timestamp/mod.rs
expression: statement
---
Some(
    Statement {
        sql: "\nCREATE TRIGGER foo_update_timestamp_updated_at BEFORE UPDATE\nON public.foo\nFOR EACH ROW\nEXECUTE PROCEDURE update_timestamp_updated_at();\n",
        values: None,
        db_backend: Postgres,
    },
)
